--- a/EasyLearn/UI/Pages/DictationPage.xaml
+++ b/EasyLearn/UI/Pages/DictationPage.xaml
@@ -18,26 +18,22 @@
                 <RowDefinition Height="0.4*"/>
             </Grid.RowDefinitions>
 
-            <!--Подсказка "используйте Enter"-->
-            <!--<materialDesign:Card Height="50" Width="300" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0 20 20 0">
-                <StackPanel VerticalAlignment="Center">
-                    <TextBlock FontSize="13" Text="Для проверки и перехода к следующему слову" HorizontalAlignment="Center"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <TextBlock FontSize="13" Text='можно использовать клавишу ' />
-                        <TextBlock FontSize="13" Text='"Enter"' FontWeight="Bold"/>
-                    </StackPanel>
-                   
-                </StackPanel>
-            </materialDesign:Card>-->
-
-            <StackPanel Grid.Row="0" VerticalAlignment="Center" Margin="0 40 0 0">
-                <TextBlock
+            <StackPanel Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0 40 0 0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock
                        FontSize="90"
                        Text="{Binding DisplayValue}"
                        Style="{DynamicResource MaterialDesignHeadline1TextBlock}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        Margin="0 0 0 10"/>
+                    <materialDesign:Chip Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Icon="T" Content="{Binding CurrentUnitType}"/>
+                </Grid>
+                
                 <TextBlock
                        FontSize="50"
                        Text="{Binding DisplayCommentValue}"
@@ -46,89 +42,7 @@
                        VerticalAlignment="Center"
                     Foreground="Gray"/>
             </StackPanel>
-            <!--Текстблок, отображающий русский перевод текущего слова в диктанте-->
-
-
-            <!--Изображение "Чтобы начать, нажмите start"-->
-            <!--<StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="0 100 0 0"
-                        Name="pressStartImage"
-                        Visibility="{Binding PressStartImageVisibility}">
-
-            -->
-            <!--<Image Source="D:\Visual Studio Projects\Plaid\Plaid\Images\smile_face.png" 
-                               Width="128"
-                               Height="128"/>-->
-            <!--
-
-            <TextBlock Text='Чтобы начать диктант, нажмите "Начать"' 
-                                   Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                   FontSize="20"
-                                   HorizontalAlignment="Center"
-                                   Margin="0 0 0 10"/>
-
-
-        </StackPanel>-->
-
-            <!--Изображение "нет слов в базе"-->
-            <!--<StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="0 75 0 0"
-                        Name="dictationNoWordsImage"
-                        Visibility="{Binding NoWordsImageVisibility}">
-
-            -->
-            <!--<Image Source="D:\Visual Studio Projects\Plaid\Plaid\Images\sleep_face.png" 
-                       Width="128"
-                       Height="128"/>-->
-            <!--
-
-            <TextBlock Text='Чтобы начать диктант, добавьте хотя бы одно слово в базу' 
-                                   Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                   FontSize="20"
-                                   HorizontalAlignment="Center"
-                                   Margin="0 0 0 10"/>
-
-            <TextBlock Text='Для этого нужно перейти в окно "Настройки" и нажать кнопку "Добавить новое слово"' 
-                                   Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                   FontSize="12"
-                                   HorizontalAlignment="Center"
-                                   Margin="0 0 0 10"/>
-
-
-        </StackPanel>-->
-
-            <!--Изображение "нет ни одного аккаунта"-->
-            <!--<StackPanel HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        Margin="0 75 0 0"
-                        Name="dictationNoAccountImage"
-                        Visibility="{Binding NoAccountImageVisibility}">
-
-
-
-            -->
-            <!--<Image Source="D:\Visual Studio Projects\Plaid\Plaid\Images\sleep_face.png" 
-                               Width="128"
-                               Height="128"/>-->
-            <!--
-
-            <TextBlock Text='Чтобы проводить диктанты, необходимо создать аккаунт' 
-                                   Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                   FontSize="20"
-                                   HorizontalAlignment="Center"
-                                   Margin="0 0 0 10"/>
-
-            <TextBlock Text='Для этого нужно перейти в окно "Аккаунты" и нажать кнопку "Создать новый аккаунт"' 
-                                   Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                   FontSize="12"
-                                   HorizontalAlignment="Center"
-                                   Margin="0 0 0 10"/>
-
-
-        </StackPanel>-->
-
+            
             <StackPanel Orientation="Horizontal" 
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
@@ -156,8 +70,8 @@
                         Visibility="{Binding IsCheckWordButtonVisible, Converter={converters:ReverseCollapseConverter}}">
 
                     <materialDesign:PackIcon Kind="Eye"
-                                         Height="25"
-                                         Width="25"/>
+                                             Height="25"
+                                             Width="25"/>
                 </Button>
 
                 <!--Кнопка "двигаться дальше"-->
@@ -168,13 +82,11 @@
                         Visibility="{Binding IsNextWordButtonVisible, Converter={converters:ReverseCollapseConverter}}">
 
                     <materialDesign:PackIcon Kind="ArrowRightBold"
-                                         Height="25"
-                                         Width="25"/>
+                                             Height="25"
+                                             Width="25"/>
                 </Button>
 
             </StackPanel>
-
-
 
             <!--Иконка правильного ответа-->
             <materialDesign:PackIcon Kind="Check" 
@@ -248,7 +160,6 @@
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
-
                             </Button>
 
                             <!--Кнопка подтверждения старта диктанта-->
@@ -263,9 +174,7 @@
                                         <i:InvokeCommandAction Command="{Binding StartDictationCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
-
                             </Button>
-
                         </StackPanel>
                     </StackPanel>
                 </Button.CommandParameter>
@@ -284,90 +193,8 @@
 
 
                 <!--View окошка результата диктанта-->
-
                 <Button.CommandParameter>
                     <StackPanel Margin="10">
-
-
-                        <!--<Image Source="{Binding TotalGrade, Converter={StaticResource finalResultImageConverter}}" 
-                               Width="128"
-                               Height="128"
-                               Margin="0 0 0 10"/>-->
-
-
-
-                        <!--<Grid>
-
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="140"/>
-                                <ColumnDefinition/>
-                            </Grid.ColumnDefinitions>
-
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="Всего слов:"
-                                       Grid.Column="0"
-                                       Grid.Row="0"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="Дано ответов:"
-                                       Grid.Column="0"
-                                       Grid.Row="1"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="Правильных:"
-                                       Grid.Column="0"
-                                       Grid.Row="2"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="Ошибочных:"
-                                       Grid.Column="0"
-                                       Grid.Row="3"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="Оценка:"
-                                       Grid.Column="0"
-                                       Grid.Row="4"/>
-
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="{Binding CurrentDictationWordCount}"
-                                       Grid.Column="1"
-                                       Grid.Row="0"
-                                       FontWeight="Bold"
-                                       HorizontalAlignment="Right"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="{Binding TotalAnsers}"
-                                       Grid.Column="1"
-                                       Grid.Row="1"
-                                       FontWeight="Bold"
-                                       HorizontalAlignment="Right"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="{Binding TotalTrueAnsers}"
-                                       Grid.Column="1"
-                                       Grid.Row="2"
-                                       FontWeight="Bold"
-                                       HorizontalAlignment="Right"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="{Binding TotalWrongAnsers}"
-                                       Grid.Column="1"
-                                       Grid.Row="3"
-                                       FontWeight="Bold"
-                                       HorizontalAlignment="Right"/>
-                            <TextBlock Style="{DynamicResource MaterialDesignBody1TextBlock}"
-                                       Text="{Binding TotalStringGrade}"
-                                       Grid.Column="1"
-                                       Grid.Row="4"
-                                       FontWeight="Bold"
-                                       HorizontalAlignment="Right"/>
-
-                        </Grid>-->
-
-
-
-
                         <Button Style="{DynamicResource MaterialDesignFlatButton}"  
                                 HorizontalAlignment="Center"
                                 Content="Понятно"
@@ -375,7 +202,6 @@
                                 Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"
                                 FocusVisualStyle="{x:Null}">
                         </Button>
-
                     </StackPanel>
                 </Button.CommandParameter>
 
@@ -385,7 +211,6 @@
                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}"/>
                     </i:EventTrigger>
                 </i:Interaction.Triggers>
-
             </Button>
 
             <!--Всплывающая подсказка-->
@@ -394,7 +219,6 @@
                                      IsActive="{Binding PromtIsActive}">
                 <materialDesign:SnackbarMessage Content="{Binding CurrentPromtText}" HorizontalAlignment="Center"/>
             </materialDesign:Snackbar>
-
         </Grid>
     </materialDesign:DialogHost>
 </Page>
